--- a/4.md
+++ b/4.md
@@ -155,13 +155,13 @@ Notes
 
 [^1]:	James Baldwin, _Giovani’s Room_ (New York: Dial Press, 1956), 39.
 
-[^2]:	Technically speaking, self and identity demarcate different entities. Self is a reflection on and reference by an individual to him or herself. Identity is the condition of having a unique existence. In philosophy, identity relates to sameness across time. In practice, however, the terms have demonstrated a good deal of slippage so that continuity of self---constant awareness of the continuity of oneself---is taken in much literature as proof of coherent identity. See Gerald Izenberg, _Identity: The Necessity of a Modern Idea _(Philadelphia: University of Pennsylvania Press, 2016), 1-15.
+[^2]:	Technically speaking, self and identity demarcate different entities. Self is a reflection on and reference by an individual to him or herself. Identity is the condition of having a unique existence. In philosophy, identity relates to sameness across time. In practice, however, the terms have demonstrated a good deal of slippage so that continuity of self---constant awareness of the continuity of oneself---is taken in much literature as proof of coherent identity. See Gerald Izenberg, *Identity: The Necessity of a Modern Idea* (Philadelphia: University of Pennsylvania Press, 2016), 1-15.
 
 [^4]:	Andrew Scull, “The mental health sector and the social sciences in post-World War II USA. Part 1: Total war and its aftermath,” _History of Psychiatry_ 22(1) 2010: 14.
 
-[^5]:	On the prominence of psychological discourse, see Alan Petigny, _The Permissive Society: America, 1941-1965 _(New York: Cambridge University Press, 2009), 15-99. _Life _Magazine_ _recognized the new importance of psychology in 1957 with a five-part series. See Ernest Haveman, “Age of Psychology in the U.S.” _Life,_ January 7, 1957, 68-82. Subsequent issues tackled psychological testing, the use of psychology in the workplace, psychoanalyses, and the future of psychology.
+[^5]:	On the prominence of psychological discourse, see Alan Petigny, _The Permissive Society: America, 1941-1965_ (New York: Cambridge University Press, 2009), 15-99. *Life* Magazine recognized the new importance of psychology in 1957 with a five-part series. See Ernest Haveman, “Age of Psychology in the U.S.” _Life_ January 7, 1957, 68-82. Subsequent issues tackled psychological testing, the use of psychology in the workplace, psychoanalyses, and the future of psychology.
 
-[^6]:	The *Life* discussion of Freud in “The Age of Psychology” series appeared in the January 21, 1957 issue. Particularly rewarding on the influence of Freud after the war is John C. Burnham, _After Freud Left: A Century of Psychoanalysis in America _(Chicago: The University of Chicago Press, 2012), especially part II with essays by Dorothy Rossuis Menand, and Jean-Christophe Agnew.
+[^6]:	The *Life* discussion of Freud in “The Age of Psychology” series appeared in the January 21, 1957 issue. Particularly rewarding on the influence of Freud after the war is John C. Burnham, _After Freud Left: A Century of Psychoanalysis in America_ (Chicago: The University of Chicago Press, 2012), especially part II with essays by Dorothy Ross, Louis Menand, and Jean-Christophe Agnew.
 
 [^7]:	Douglas T. Miller and Marion Nowak, _The Fifties: The Way We Really Were_ (Garden City, N.Y.: Doubleday, 1977); Petigny, _The Permissive Society: America, 1941-1965_, 100-33.
 
