--- a/4.md
+++ b/4.md
@@ -1,14 +1,14 @@
 ---
 title: Chapter Four
 subtitle:  The De-centered Search for the Centered Self
-bibliography: /Users/dhborus/Desktop/Sources.json
-csl: /Users/dhborus/Desktop/chicago-fullnote-bibliography-with-ibid.csl
+bibliography: /Users/dborus/Desktop/Bibliography.bib
+csl: /Users/dborus/Desktop/chicago-fullnote-bibliography-with-ibid.csl
 
 ---
 
 
 
-Looking back on his decision to light out suddenly for Europe, the narrator-protagonist of James Baldwin’s _Giovanni’s Room_ (1956), David, muses that he most likely did so because, “as we say in America, I wanted to find myself.” The phrase, he adds, does not appear “in the language of any other people.” It “certainly does not mean what it says but betrays a nagging suspicion that something has been misplaced.” The sojourn does little to help David resolve his confusion, especially his uncertainty about his sexual orientation. Vacillating between homosexual and heterosexual romances, David possesses no firm sense of who he is and whom he desires. He is engaged to be married yet seems to truly love (or at least passionately desire) the title character, a bartender at a gay bar in Paris who kills the owner over the latter’s refusal to rehire him. Wracked by guilt on the day of Giovanni’s execution, David admits that in the end he still has the “same self from which I had spent so much time in flight.”[^1] 
+Looking back on his decision to light out suddenly for Europe, the narrator-protagonist of James Baldwin’s _Giovanni’s Room_ (1956), David, muses that he most likely did so because, “as we say in America, I wanted to find myself.” The phrase, he adds, does not appear “in the language of any other people.” It “certainly does not mean what it says but betrays a nagging suspicion that something has been misplaced.” The sojourn does little to help David resolve his confusion, especially his uncertainty about his sexual orientation. Vacillating between homosexual and heterosexual romances, David possesses no firm sense of who he is and whom he desires. He is engaged to be married yet seems to truly love (or at least passionately desire) the title character, a bartender at a gay bar in Paris who kills the owner over the latter’s refusal to rehire him. Wracked by guilt on the day of Giovanni’s execution, David admits that in the end he still has the “same self from which I had spent so much time in flight.”[^1]
 
 The book’s lukewarm reception owed much to Baldwin’s matter-of-fact handling of homosexuality and his refusal to confine his writing to “black” subjects. His insight that the quest for stable sense of identity constituted a central concern of American cultural life, however, was very much on point.[^2] Individuals had, of course, long pondered the question who they were, but, in light of Cold War era worries about the deleterious effects of an impersonal and bureaucratic society, the search for self assumed a special importance after the war. Much art and social science took as its subject efforts to find oneself in a society in which traditional attachments and relationships were attenuated or non-existent but which had no meaningful alternatives. Where once the paths to authentic and valid selfhood were understood to come about in the normal course of living, the transformation of and pitfalls within American life made attaining a coherent self that knew its capabilities and was capable of launching significant projects a problem, a task requiring special effort and for which there were few viable guidelines. Many social analysts worried that the failure to complete the task successfully left a large portion of the American people uprooted and anxious underneath an often placid exterior
 
