--- a/4.md
+++ b/4.md
@@ -8,17 +8,32 @@ csl: /Users/dborus/Desktop/chicago-fullnote-bibliography-with-ibid.csl
 
 
 
-Looking back on his decision to light out suddenly for Europe, the narrator-protagonist of James Baldwin’s _Giovanni’s Room_ (1956), David, muses that he most likely did so because, “as we say in America, I wanted to find myself.” The phrase, he adds, does not appear “in the language of any other people.” It “certainly does not mean what it says but betrays a nagging suspicion that something has been misplaced.” The sojourn does little to help David resolve his confusion, especially his uncertainty about his sexual orientation. Vacillating between homosexual and heterosexual romances, David possesses no firm sense of who he is and whom he desires. He is engaged to be married yet seems to truly love (or at least passionately desire) the title character, a bartender at a gay bar in Paris who kills the owner over the latter’s refusal to rehire him. Wracked by guilt on the day of Giovanni’s execution, David admits that in the end he still has the “same self from which I had spent so much time in flight.”[^1]
+---
+bibliography: /Users/dborus/Desktop/Bibliography.bib
+csl: /Users/dborus/Desktop/chicago-fullnote-bibliography.csl
+---
 
-The book’s lukewarm reception owed much to Baldwin’s matter-of-fact handling of homosexuality and his refusal to confine his writing to “black” subjects. His insight that the quest for stable sense of identity constituted a central concern of American cultural life, however, was very much on point.[^2] Individuals had, of course, long pondered the question who they were, but, in light of Cold War era worries about the deleterious effects of an impersonal and bureaucratic society, the search for self assumed a special importance after the war. Much art and social science took as its subject efforts to find oneself in a society in which traditional attachments and relationships were attenuated or non-existent but which had no meaningful alternatives. Where once the paths to authentic and valid selfhood were understood to come about in the normal course of living, the transformation of and pitfalls within American life made attaining a coherent self that knew its capabilities and was capable of launching significant projects a problem, a task requiring special effort and for which there were few viable guidelines. Many social analysts worried that the failure to complete the task successfully left a large portion of the American people uprooted and anxious underneath an often placid exterior
+#  Chapter Four:
 
-The self in the postwar era was not only a cultural problem. It was also a political problem. A new form of analysis, one we might call psychosocial, achieved prominence in the middle third of the twentieth century, arguing in effect that political health depended on the psychic health of the populace. Such works as Erich Fromm’s _Escape From Freedom_ (1941), Theodor Adorno’s _Authoritarian Personality_ (1950), and Hannah Arendt’s _Origins of Totalitarianism_ (1951) attributed mass intolerance and antidemocratic movements to psychosocial disarray. Totalitarianism thus succeeded less by meeting material needs than by manipulating unfulfilled psychological ones. Although the ideologies of fascism and communism had little actual support, many commentators nonetheless worried that a society of anomic individuals who lacked internalized standards were fodder for poseurs and demagogues. That possibility no doubt fanned an interest in Tocqueville’s argument that democracy produced citizens who sought safety in a culture of stifling uniformity and were capable of massing against those who were distinctive.
+### The Decentered Search for the Centered Self
+\
+\
+Just before he lights out for Europe, the narrator-protagonist of James Baldwin’s *Giovanni’s Room* (1956), David, muses that he did so because he “wanted to find myself.” He regards that desire as peculiarly American, noting that the phrase is neither current “in the language of any other people” and “certainly does not mean what it says but betrays a nagging suspicion that something has been misplaced.” The sojourn to the Old World does little to render David’s desires, inclinations, and capacities legible or stable. Unable to accept his homosexual longings, particularly for the titular character whom he abandons in the face of his conviction and execution for murder, David ends alienated from his very physical being, baffled when looking in the mirror by “what moves in this body” and for “what this body is searching.”[@baldwin1956a, p. 39, 189]
 
- Contemporary psychology experiments seemed to confirm inclinations toward conformity. The work of both Solomon Asch (1956) and Stanley Milgram (1963) was much cited as warning signals that individuals lacked the psychological assuredness to resist a relentless majority. Asch demonstrated that college students would change their view of which of two lines was longest when others in the group disagreed. Milgram instructed study participants to apply electric shocks when “learners” seated in another room delivered wrong answers. Participants did not know that the “learners” were confederates or that the shocks were not actually administered. Despite initial reluctance, most participants continued to “shock” when ordered to do so by figures displaying symbols of authority (white lab coats, clipboard), even when the “learners” let out loud screams.[@asch1951; @asch1956; @milgram1963] There was, some observers concluded, a “Good German” and a torturer within all of us.
+Contemporary critics found fault not only with the novel's unapologetic treatment of homosexuality but also its lack of coverage of black life and accused Baldwin of decadence and elitism. They missed, however, the central contention of Baldwin's fiction and nonfiction alike: the race problem originated in whites' inability to know themselves. Baldwin was only one of many artists and scholars who held that postwar American society made it difficult for Americans to develop a firm sense of who they were, allow consistent personal expression or reliably foster expanded capacities. As the leading exemplar of modernity, the United States was, the argument went, especially prone to psychic upheavals and fragmentation despite the often placid exterior of its citizens. Writing in 1962, the husband and wife team Mary and Eric Josephson laid blame for such psycho-social disorders as loss of self, anxiety states, despair, rootlessness, apathy, meaninglessness, and loss of beliefs and values on the absence of meaningful communities and interpersonal relations. Other commentators blamed corporate bureaucracy, advertising, and a wide array of institutional demands for conformity such as schools and the media. [@josephson1962. Popular contemporary criticisms of American life include John Keats, *The Crack in the Picture Window* (Boston: Houghton Mifflin, 1957); @packard1957; and @whyte1956. Two by Daniel Horowitz examine the genre: *Vance Packard & American Social Criticism* (Chapel Hill: The University of North Carolina Press, 1994) and *The Anxieties of Affluence: Critiques of American Consumer Culture, 1939-1979* (Amherst: University of Massachusetts Press, 2004).]
 
-In meeting the growing weight of expectations placed on the self, Americans increasingly looked to psychological discourse or therapy rather than religion or philosophy, as would have been the case in the past. Where once Americans examined the state of their souls, their postwar counterparts more often than not turned their attention to their mental and emotional makeup. Five times as many doctorates in psychology were awarded in the 1950s as the decade before. The number of psychiatrists increased ten fold from 1939 to 1959.[^4] Those numbers do not included pastoral counseling, which grew by leaps and bounds at midcentury. With numbers came a new prestige. Robert Linder’s _Fifty-Minute Hour_ (1955) and two of Alfred Hitchcock’s films _Vertigo_ (1958) and _Psycho_ (1960) were emblematic of the midcentury tendency to extol the psychiatrist as seer and depth psychology as the royal road to understanding motivation. Outside the consulting room, advice literature also echoed the concentration on the psychological. Rabbi Joshua Liebman’s best-selling _Peace of Mind_ (1946), which aspired to blend Talmudic wisdom with Freudian insight, and the immensely popular newspaper columns of actual sisters Abigail Van Buren and Ann Landers (both 1955) which were among the first to call upon the expertise of trained psychological professionals, were clear departures from older conduct-of-life literature.[^5]
+Postwar concern about the insubstantiality of selves quickly assumed a political cast. Material and objective causes did not, most analysts contended, fully explanation popular support for Fascist and Communist regimes.  Mass intolerance and antidemocratic movements were best explained by psychosocial abnormalities. Erich Fromm's *Escape from Freedom* (1941), Theodor Adorno's *Authoritarian Personality* (1950), and Hannah Arendt's *Origin of Totalitarianism* all attributed totalitarian success to the ability of ruling groups to manipulate unfulfilled psychological needs. Although fascist and communist ideologies had little appeal to most Americans, many commentators nonetheless worried that a society of anomic individuals who lacked internalized standards were fodder for poseurs and demagogues. That possibility no doubt fanned an interest in Tocqueville's argument that democracy produced citizens who sought safety i a culture of stifling uniformity and who were capable of massing against those who were distinctive or different.[@mcclay1994 contains a useful summary of the tendency to explain political phenomena by psycho-social factors. It is noteworthy perhaps that all three were Jewish refugees from Nazi Germany. The philosopher Jacob Talmon, author of *The Origins of Totalitarian Democracy* (Boston: Beacon Press, 1952) might also be included in this group.] Augmenting the theoretical work of the social critics was that of social psychologists in a series of experiments Solomon Asch and Stanley Milgram obtained results that suggested most individuals lacked the psychological assuredness to resist a relentless majority or a demanding, unfeeling authority. Asch (1951, 1956) observed that subjects more often than not acceded to the group truth, even when it countered their own perceptions. For his part, Milgram discovered that most people would continue to punish others when ordered to do so. There was, many observers concluded a "Good German" in all of us.[The pertinent studies are @asch1951; @asch1956; and @milgram1963. For a discussion of the implications for the social psychology of postwar politics, see *Critical Psychology: An Introduction* (London: Sage, 1997) and Israel Charny, *Fascism and Democracy in the Human Mind: A Bridge between Mind and Society* (Lincoln: University of Nebraska Press, 2006)]
 
-The importance of psychology to the effort to anchor the self made Sigmund Freud a crucial influence on American thought and culture. So prominent was he that the mass-market _Life_ magazine devoted a lengthy article to explaining his work and relevance to modern life.[^6] The Freudian unconscious was not, however, the only entry way Americans used to find themselves. For some, biology provided reassurance. Arguments that certain types of bodies bequeathed certain personalities were numerous. The search also appeared in wide-ranging debates over whether society was too much or too little present. For some, it pressed in so heavily that individuals could not achieve anything resembling authenticity. Others dissented, contending that the inability to connect with others was the cardinal condition of modern life. In many ways, the teenage years brought together both the somatic and social problems since that stage of life entailed both changing bodies and anxieties over popularity. Since the teenage years were also the time when individuals were, like Baldwin’s David, expected to find themselves, adolescence not surprisingly was the focus of intense interest and expectations. That adolescent selves (and by extension selves in general) found it extremely difficult to bear the burdens with which it was tasked only served to reinforce suspicions that the self was more fragile than it seemed.
+In meeting the growing weight of expectations placed on the self, Americans increasingly looked to psychological discourse or therapy rather than religion or philosophy, as would have been the case in the past. Where once Americans examined the state of their souls, their postwar counterparts more often than not turned their attention to their mental and emotional makeup. Emblematic of the shift was Rabbi Joshua Liebman's best-selling *Peace of Mind* (1947), which blended Talmudic wisdom with Freudian insight and a new popular advice literature, spearheaded by Ann Landers and Abigail Van Buren, that substituted psychological discernment for the old conduct of life bromides.[^5] Five times as many doctorates in psychology were awarded in the 1950s as the decade before. The number of psychiatrists increased ten fold from 1939 to 1959.[@scull2010]  Those numbers do not include the tremendous growth in psychological-based pastoral counseling. With numbers came a new prestige. Robert Linder’s *Fifty-Minute Hour* (1955) was indicative of the midcentury tendency to extol the psychiatrist as seer and depth psychology as the royal road to understanding motivation -- a tendency that informed a spate of movies ranging from Alfred Hitchcock's *Spellbound* (1945) to John Houston's *Freud* (1962). Small wonder, then, that *Life* Magazine hailed the 1950s as the "Age of Psychology."[^7]
+
+Efforts in the "Age of Psychology" to find the foundations of a secure and stable self proceeded along a number of dimensions. Although Freud and Freudian discourse and therapies garnered great attention, they by no means had a monopoly. Personality testing, which gained great popularity in business and schools with its promise of matching people with jobs and mates with which they were best suited, owed much to Carl Jung's *Psychological Types* (1923).[The Myers-Briggs Type Indicator was the leading tool for categorizing and sorting people during the mid-twentieth century. @emre2018] For all the emphasis on thought, feeling, and inclination, biological determinism remained a crucial component of the search for a centered self. A number of investigators pinned their hopes on deciphering the somatic basis of selfhood. Others pondered the proper relationship between the self and others. At stake was whether society was too pressing on individuals or whether social bonds were too insubstantial and evanescent. The two concerns merged in one of the key worries of postwar American life, the nature of teenagers. A period of changing bodies and role testing, the teenage years proved fertile ground for theorists and artists alike.
+
+
+
+
+[^5]: On the prominence of psychological discourse, see Alan Petigny, _The Permissive Society: America, 1941-1965_ (New York: Cambridge University Press, 2009), 15-99 and @herman1995. The traditional argument holds that psychology and the therapeutic undercut religious strictures about holy and sanctified behavior by elevating psychic peace and adjustment. See [@rieff1959] and [@meyer1965]. [@stevens2010] has challenged the interpretation,
+
+[^7]: The *Life* series, written by Ernest Havemen, ran over five issues, kicking off on January 7, 1957. Included were discussions of psychological testing, the use of psychology in the workplace, psychoanalysis, and the future of psychology.
 
 
 
