Desktop 31 March 2019 11AM

--- a/Notes/Emre2018.md
+++ b/Notes/Emre2018.md
@@ -8,7 +8,7 @@ Briggs-Murray-Jung nexus. Key book is *Psychological Types* (1923)[@emre2018, p.
 
 Murray's personology -- accounted for everything in the objective and subjective realms--observable tics, habits, routines, unconscious sexual urges, etc. -- attempt to "narrate the complicated business of existence without reducing it to anything as crude as Watson's philosophy of learned behavior or Freud's theories of sexual repression." [@emre2018, p.96]
 
-introvert-Extrovert Club in New York for Jung's students. took over from Morton Prince at Harvard, Prince was the founder of the American school of psychotherapy and the first psychologist to identify a case of multiple personality disorder in 1906 book *The Dissociation of a Personality*. Worked with Allport, stress on internal life.
+Introvert-Extrovert Club in New York for Jung's students. took over from Morton Prince at Harvard, Prince was the founder of the American school of psychotherapy and the first psychologist to identify a case of multiple personality disorder in 1906 book *The Dissociation of a Personality*. Worked with Allport, stress on internal life.
 
 Cecilia Roberts suggested rather than having patient generate images to analyze, psychiatrist show images and hear a story. Assumption -- main character represented the test subject. plot revealed actual or fantasied events. [@emre2018, p.99]
 
