--- a/5.md
+++ b/5.md
@@ -80,7 +80,7 @@ Friedan found that, despite marriage and motherhood, college-educated women were
 _Mystique_ was filled with stories of intelligent women under the spell of the mystique who cut short educational and career objectives in exchange for the “Mrs.” degree. The great contribution of the book was to provide a meaningful explanation of how the refurbished ideology of domesticity was spread and internalized. Friedan mapped the wide array of institutions that operated on the premise that women’s identity was rooted in their biology and that their nature was emotional and passive. Among those she singled out were women’s magazines (more often than not edited by men for the stereotypical woman of the home), advertising that reinforced notions of childlike, oversexualized women, and psychology, especially that with a Freudian lineage. Advertising in Friedan’s view sexualized utilitarian objects, reinforcing beliefs that women’s sense of self depended upon their bodies, not their accomplishments. By affirming the incomplete female personality structure, psychology provided a supposedly unimpeachable scientific justification for the mystique. Modern-day psychological discourse put at the center of female psychology penis envy, the desire for the male organ and the power it embodied and posited that women could compensate for their incomplete nature by fully embracing motherhood. Despite their ubiquity, neither advertising nor psychology offered real satisfaction for women.
 Friedan’s argument for common humanity was rooted in the alternative psychology of Erikson and humanistic psychologist Abraham Maslow. Maslow posited a pyramid of needs ranging from the physiological at the bottom to the self-actualization at the apex. Self-actualization needs, which included morality, creativity, and spontaneity, came into play when individuals engaged in a quest to achieve their full potential. Neither Erikson nor Maslow applied their theories to women or were conceived that the development that they described pertained to them (310-11). By limiting women to the lower levels of Maslow’s hierarchy, Friedan maintained, society suffered. “If women’s needs for identity, for self-esteem, for achievement, and finally for expression of her unique human individuality are not recognized by herself or others in our culture, she is forced to seek identity and self-esteem in the only channels open to her: the pursuit of sexual fulfillment, motherhood, and the possession of material things” (315-6). Friedan therefore urged women to reject deadening housework (342), reduce their investment in marriage (344), and train themselves for meaningful work. “Who knows,” Friedan asked at the conclusion of her book, “of the possibilities of love when men and women share not only children, home, and garden, not only the fulfillment of their biological roles, but also the responsibilities and passions of the work that creates the human future and the full human knowledge of who they are?” (378).
 The _Feminine Mystique_ has rightly earned a place as a feminist classic --- one of those works that not only documents gender oppression but provides a coherent and meaningful account of how it occurs. The book’s staying power owes much to its incisive language that makes its critique both comprehensible and memorable. Friedan’s indictment of American gender relations struck an immediate responsive chord with her readers. Many women wrote to Friedan enthusiastically, crediting the book with giving voice to the dissatisfaction they felt and opening up possibilities to challenge what Friedan had termed the “comfortable concentration camp” of wife and mother roles.
-The book was not without its limitations. Critics then and since have noted that Friedan at times both missed some of the sources of women’s exclusion and at others overstated their marginality. Friedan often let white middle-class suburban women stand in for women as a whole. By concentrating on college-educated women, she explored little of the experiences of working-class women or women of color, who were less likely to be subjected to the mystique or afford to forfeit a paycheck. Indeed, Friedan may well have overemphasized the postwar return to domesticity. Throughout the 1950s, the number of married women in the workforce grew by 42 percent. The feminist poet Eve Merriam even produced a children’s book, _Mommies at Work _(1961), to commemorate the condition.[^57] Susan Hartmann has shown that Cold War rhetoric simultaneously insisted that the family was a foundation of national defense and urged increased productivity. The first envisioned women in the home; the second implied places for them in the workforce. The National Manpower Council and the Commission on the Education of Women both recommended at one point child-care grants and supplements for higher education, particularly in the sciences.[^58] Nor could one say that the era lacked for creative woman. Their presence in no way refutes the notion of male domination of the arts but such women who came to prominence in the immediate postwar period as Hannah Arendt, Harriette Arnow, Elizabeth Bishop, Gwendolyn Brooks, Rachel Carson, Janet Flanner, Lorraine Hansberry, Margaret Mead, Mary McCarthy, Diana Trilling, Lillian Smith, Flannery O’Connor, and Jean Stafford constitute such significant contributions to postwar American letters as to complicate any notion of complete female silence.[^59] Others have pointed out that Friedan’s portrait of the intellectual climate was incomplete. For example, orthodox psychoanalytic opinion on gender and sexuality was considerably more varied than she acknowledged. Although there was a good deal of reductionism in psychoanalytic debates, there was also sectors of the analytic community that understood the domesticity in resolving psychological problems. Friedan used had Lundberg’s and Farnham’s misogynist _Modern Woman_ as representative of Freudianism, although neither author was an analyst and the _Psychoanalytic Journal_ criticized the book as retrograde and analytically confused.[^60] As historian Joanne Meyerowitz has shown in her extensive study of women’s magazines, the mainstream press offered mixed messages. Readers were just as likely as not to find articles praising female creativity and assertion, rejecting nurturing love as the highest expression of femininity, and recommending marriages based on true sharing.[^61]
+The book was not without its limitations. Critics then and since have noted that Friedan at times both missed some of the sources of women’s exclusion and at others overstated their marginality. Friedan often let white middle-class suburban women stand in for women as a whole. By concentrating on college-educated women, she explored little of the experiences of working-class women or women of color, who were less likely to be subjected to the mystique or afford to forfeit a paycheck. Indeed, Friedan may well have overemphasized the postwar return to domesticity. Throughout the 1950s, the number of married women in the workforce grew by 42 percent. The feminist poet Eve Merriam even produced a children’s book, *Mommies at Work* (1961), to commemorate the condition.[^57] Susan Hartmann has shown that Cold War rhetoric simultaneously insisted that the family was a foundation of national defense and urged increased productivity. The first envisioned women in the home; the second implied places for them in the workforce. The National Manpower Council and the Commission on the Education of Women both recommended at one point child-care grants and supplements for higher education, particularly in the sciences.[^58] Nor could one say that the era lacked for creative woman. Their presence in no way refutes the notion of male domination of the arts but such women who came to prominence in the immediate postwar period as Hannah Arendt, Harriette Arnow, Elizabeth Bishop, Gwendolyn Brooks, Rachel Carson, Janet Flanner, Lorraine Hansberry, Margaret Mead, Mary McCarthy, Diana Trilling, Lillian Smith, Flannery O’Connor, and Jean Stafford constitute such significant contributions to postwar American letters as to complicate any notion of complete female silence.[^59] Others have pointed out that Friedan’s portrait of the intellectual climate was incomplete. For example, orthodox psychoanalytic opinion on gender and sexuality was considerably more varied than she acknowledged. Although there was a good deal of reductionism in psychoanalytic debates, there was also sectors of the analytic community that understood the domesticity in resolving psychological problems. Friedan used had Lundberg’s and Farnham’s misogynist _Modern Woman_ as representative of Freudianism, although neither author was an analyst and the _Psychoanalytic Journal_ criticized the book as retrograde and analytically confused.[^60] As historian Joanne Meyerowitz has shown in her extensive study of women’s magazines, the mainstream press offered mixed messages. Readers were just as likely as not to find articles praising female creativity and assertion, rejecting nurturing love as the highest expression of femininity, and recommending marriages based on true sharing.[^61]
 Contrary to legend, Friedan did not singlehandedly revive feminism or solely provide its intellectual basis. Other contemporary feminists recognized the role of biology and psychology in providing justification for circumscribing female aspiration. Such prominent writers as Ruth Herschberger (1917-2014) and Eve Merriam (1916-1992) provided incisive dissents from the conventional wisdom about women’s nature and sharp arguments for their emancipation from restricted status. Like Friedan, Herschberger and Merriam were also Jewish, held advanced degrees, and had left-wing connections. Like _Mystique_, Herschberger’s _Adam’s Rib_ (1948) and Merriam’s _After Nora Slammed the Door: American Women in the 1960s, The Unfinished Revolution_ (1964) opposed motherhood as the sole natural role for women and female deference as a _modus operandi_. The books also shared a resolve to chart the institutions that restricted women’s possibilities, a project Merriam had undertaken as well with _Figleaf_ (1960), an analysis of the fashion industry’s manipulation of women.[^62]
 Given the role of biological science in defining women, both Herschberger and Merriam set their sights on how it came to its findings. They both charged that buried within supposedly objective science were numerous unwarranted assumptions. From their vantage point, studies of sex differences all too often proceeded by taking male and female qualities as given rather than things to be demonstrated. In her 1944 dismantling of Robert Yerkes’ famous work with chimps, Herschberger pointed to the loaded language and tendentious interpretation of ambiguous results that allowed Yerkes to assume incorrectly that males were naturally assertive and females depended on sexual allure.[^63] Responding to assertions that women could not do work involving abstractions because they were naturally concrete thinkers, Merriam, for her part, noted the ways in which evidence to the contrary such as tremendous success of women in theoretical physics classes when they were allowed to take them was discounted or ignored.[^64] Nor was science the only institution that misperceived women. The assumption of female difference was embedded in language itself. “Not the least of man’s capacities,” Merriam argued, “is our male-oriented language” (208). One form of asserting male dominance, Merriam wrote, was “to assign the female to her place as a non-man and set her aside” (206). Another was to incorporate women in a larger whole. The word _man_, she noted, has come to stand for both sexes. Merriam hoped that eventually American society would be organized to “make use of the full individual,” but contended that women needed to overcome the ill effects of internalization of assertions of female difference (67).
 For gays and lesbians, belonging was especially problematic. Facing both legal prohibition and social condemnation, most survived by not acknowledging the nature of their sexual desire. Prior to the war, few gay and lesbian communities in which there was an understanding of commonality existed. Some large cities such as San Francisco, Chicago, and New York did have special meeting places such as public baths or particular parks and distinctive customs as to how signal interest, and special roles and traits such as “fairies” or “butches.” Community-building intensified with the end of Prohibition, which made possible bar-based cultures, and World War II, which threw together large groups of like-inclined men and women who suddenly realized how prevalent their desires were.[^65]
@@ -232,7 +232,7 @@ Penniman and Berry did bequeath to popular music the elements that would be its 
 
 [^61]:	Joanne Meyerowitz, “Beyond the Feminine Mystique: A Reassessment of Postwar Mass Culture, 1946- 1958,” in Meyerowitz, _Not June Cleaver_, 229-62.
 
-[^62]:	Eve Merriam, _After Nora Slammed the Door _(Cleveland: World Pub. Co., 1964); Eve Merriam, _Figleaf: The Business of Being in Fashion _(Philadelphia: Lippincott, 1960); Ruth Herschberger, _Adam’s Rib _(New York: Pellegrini & Cudahy, 1948).
+[^62]:	Eve Merriam, *After Nora Slammed the Door* (Cleveland: World Pub. Co., 1964); Eve Merriam, *Figleaf: The Business of Being in Fashion* (Philadelphia: Lippincott, 1960); Ruth Herschberger, *Adam’s Rib* (New York: Pellegrini & Cudahy, 1948).
 
 [^63]:	Herschberger, _Adam’s Rib_, 5-28. See also Shira Tarrant, _When Sex Became Gender_ (New York: Routledge, 2006), 190-210.
 
